Update the site navigation and stylesheets.
Add icons to level 1 and level 2 navigations.
Replace the default favicon with VSCloud related one.
Replace splash image on login page with VSCloud related one.
Change table's header, footer and current hovered row background color.
Add page footer template and include it in the base.html.
Show branding on the page header.
Hide the admin dashboard by default and allow user to open it
from profile dropdown menu.

ref #233

--- a/horizon/templates/base.html
+++ b/horizon/templates/base.html
@@ -32,7 +32,9 @@
       </div>
     {% endblock %}
     <div id="footer">
-      {% block footer %}{% endblock %}
+      {% block footer %}
+        {% include "_footer.html" %}
+      {% endblock %}
     </div>
     {% block js %}
       {% include "horizon/_scripts.html" %}
