--- a/openstack_dashboard/static/dashboard/less/vs_nav.less
+++ b/openstack_dashboard/static/dashboard/less/vs_nav.less
@@ -8,7 +8,7 @@
 .nav_accordion {
   background-color: @accordionBackgroundColor;
   color: #6e6e6e;
-  margin: 0;
+  margin-left: 5px;
   border: 2px solid #d5e1e7;
   .border-radius(5px 5px 5px 5px);
 
@@ -18,6 +18,7 @@
 
     h4 {
       border: 1px solid #BBBBBB;
+      border-left: 0;
       border-right: 0;
       border-bottom: 0;
       background-color: @accordionBackgroundColor;
@@ -97,7 +98,7 @@
   }
 
   dd {
-    margin-left: 6px;
+    margin-left: 0px;
     padding: 0;
     font-size: 12px;
 
