Set workflow dialog min height to avoid the next button bouncing up and down.
Add min-height to class tab-content
Increase the customization_script widget height

ref #342

--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -1244,6 +1244,7 @@ td.actions_column .btn-action-required {
 
 .tab-content {
   overflow: visible;
+  min-height: 230px;
 }
 
 /* Makes size consistent across browsers when mixing "btn-group" and "small" */
