--- a/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_ceilometer.html
+++ b/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_ceilometer.html
@@ -1,32 +1,22 @@
 {% load i18n %}
 {% load url from future %}
-<style>
-.meter_image{
-	background-color: #F0F4F6;
-	background-image: url(/static/dashboard/img/drop_arrow_l2.png);
-	background-position: 99% 50%;
-	background-repeat: no-repeat;
-	height:30px;
-}
-.chart_title_name{
-	line-height:2;
-}
-.chart_title_name_left{
-	margin-left:2%;
-	float:left;
-}
-.chart_title_name_right{
-	margin-right:49.5%;
-	float:right;
-}
-.chart_title_name_clear{
-	clear:both;
-}
-</style>
- 
+
+<div class="control-group">
+  <div class="controls">
+    {% trans "refresh cycle" %}:&nbsp;<select data-line-chart-command="select_box_change" onChange="horizon.d3_line_chart_ceilometer.switchTime();"
+            id="stats_attr" name="stats_attr" class="span2">
+      <option selected="selected" value="60000">{% trans "1 min" %}</option>
+      <option value="30000">{% trans "30 sec" %}</option>
+      <option value="300000">{% trans "5 min" %}</option>
+      <option value="600000">{% trans "10 min" %}</option>
+    </select>
+  </div>
+</div>
+
+
 <div class="info row-fluid detail">
   <div class="span12">
-    <h4 class="meter_image" id="cpu_title_image"><span style="line-height:2.5">{% trans "cpu" %}</span><span style="margin-left:94.5%;cursor:pointer" onClick="horizon.d3_line_chart_ceilometer.showCPU();">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></h4>
+    <h4 class="meter_image" id="cpu_title_image"><span style="line-height:2.5">{% trans "cpu" %}</span><span class="ceil_span_image" onClick="horizon.d3_line_chart_ceilometer.showCPU();">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></h4>
     <hr class="header_rule" />
     <div id="cpu_cup_util" class="info row-fluid detail">
      <div class="chart_title_name"><div class="chart_title_name_left">{% trans "VM CPU Usage" %}</div><div class="chart_title_name_right">{% trans "VM CPU Usage Rate" %}</div><div class="chart_title_name_clear"/></div>
@@ -63,10 +53,10 @@
     </div>
   </div>
 </div>
-
+<!--
 <div class="info row-fluid detail">
   <div class="span12">
-    <h4 class="meter_image" id="memory_title_image"><span style="line-height:2.5">{% trans "memory" %}</span><span style="margin-left:92%;cursor:pointer" onClick="horizon.d3_line_chart_ceilometer.showMemory();">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></h4>
+    <h4 class="meter_image" id="memory_title_image"><span style="line-height:2.5">{% trans "memory" %}</span><span class="ceil_span_image" onClick="horizon.d3_line_chart_ceilometer.showMemory();">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></h4>
     <hr class="header_rule" />
     <div id="memory_memory_usage" class="info row-fluid detail">
       <div class="chart_title_name"><div class="chart_title_name_left">{% trans "VM Memory Usage" %}</div><div class="chart_title_name_right">{% trans "VM Memory Usage Rate" %}</div><div class="chart_title_name_clear"/></div>
@@ -104,14 +94,14 @@
 
 <div class="info row-fluid detail">
   <div class="span12">
-    <h4 class="meter_image" id="network_bytes_image"><span style="line-height:2.5">{% trans "network" %}</span><span style="margin-left:91.5%;cursor:pointer" onClick="horizon.d3_line_chart_ceilometer.showNetworkBytes();">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></h4>
+    <h4 class="meter_image" id="network_bytes_image"><span style="line-height:2.5">{% trans "network" %}</span><span class="ceil_span_image" onClick="horizon.d3_line_chart_ceilometer.showNetworkBytes();">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></h4>
     <hr class="header_rule" />
     <div id="network_bytes" class="info row-fluid detail">
     <div class="chart_title_name"><div class="chart_title_name_left">{% trans "VM Network Outgong and Ingong Bytes" %}</div><div class="chart_title_name_right" style="margin-right:39.5%;">{% trans "VM Network Outgong and Ingong Packets" %}</div><div class="chart_title_name_clear"/></div>
       <div class="span9 chart_container" style="width: 400px;">
           <div class="chart"
                data-chart-type="line_chart"
-               data-url="{% url 'horizon:admin:metering:samples'%}?meter=network.ingoing.bytes-network.outgoing.bytes&group_by=project&date_options=null&resource_id={{ instance.id }}"
+               data-url="{% url 'horizon:admin:metering:samples'%}?meter=network.incoming.bytes-network.outgoing.bytes&group_by=project&date_options=null&resource_id={{ instance.id }}"
                data-form-selector='#linechart_general_form'
                data-legend-selector="#legend"
                data-display="true"
@@ -125,7 +115,7 @@
           <div class="span9 chart_container" style="width: 400px;">
           <div class="chart"
                data-chart-type="line_chart"
-               data-url="{% url 'horizon:admin:metering:samples'%}?meter=network.ingoing.packets-network.outgoing.packets&group_by=project&date_options=null&resource_id={{ instance.id }}"
+               data-url="{% url 'horizon:admin:metering:samples'%}?meter=network.incoming.packets-network.outgoing.packets&group_by=project&date_options=null&resource_id={{ instance.id }}"
                data-form-selector='#linechart_general_form'
                data-legend-selector="#legend"
                data-display="true"
@@ -139,7 +129,7 @@
     </div>
   </div>
 </div>
-
+-->
 <script type="text/javascript">
   if (typeof horizon.d3_line_chart !== 'undefined') {
     horizon.d3_line_chart_ceilometer.init("div[data-chart-type='line_chart']",
