Display details info in two columns.
Display two group of dt/dd in one row. If you need to display one
group of dt/dd in one row, insert an <div class="clear"></div> before them.
If dt has many dd, use span to wrap them in only one dd element.
Add a new stylesheet file for the layout.

ref #343, #344, #345, #346, #347

--- a/openstack_dashboard/dashboards/project/networks/templates/networks/subnets/_detail_overview.html
+++ b/openstack_dashboard/dashboards/project/networks/templates/networks/subnets/_detail_overview.html
@@ -25,7 +25,7 @@
       {% trans " - End" %} {{ pool.end   }}<br>
       {% endfor %}
     </dd>
-    <dt>{% trans "DHCP Enable" %}<dt>
+    <dt>{% trans "DHCP Enable" %}</dt>
     <dd>{{ subnet.enable_dhcp|yesno|capfirst }}</dd>
     <dt>{% trans "Gateway IP" %}</dt>
     <dd>{{ subnet.gateway_ip|default:"-" }}</dd>
