--- a/openstack_dashboard/dashboards/project/networks/templates/networks/_detail_overview.html
+++ b/openstack_dashboard/dashboards/project/networks/templates/networks/_detail_overview.html
@@ -20,9 +20,11 @@
     <dd>{{ network.router__external|yesno|capfirst }}</dd>
     {% if network.provider__network_type %}
     <dt>{% trans "Provider Network" %}</dt>
-    <dd>{% trans "Network Type" %}: {{ network.provider__network_type|default:_("Unknown") }}</dd>
-    <dd>{% trans "Physical Network" %}: {{ network.provider__physical_network|default:"-" }}</dd>
-    <dd>{% trans "Segmentation ID" %}: {{ network.provider__segmentation_id|default:"-" }}</dd>
+		<dd>
+			<span>{% trans "Network Type" %}: {{ network.provider__network_type|default:_("Unknown") }}</span>
+			<span>{% trans "Physical Network" %}: {{ network.provider__physical_network|default:"-" }}</span>
+			<span>{% trans "Segmentation ID" %}: {{ network.provider__segmentation_id|default:"-" }}</span>
+	  </dd>
     {% endif %}
   </dl>
 </div>
