--- a/openstack_dashboard/dashboards/project/networks/templates/networks/ports/_detail_overview.html
+++ b/openstack_dashboard/dashboards/project/networks/templates/networks/ports/_detail_overview.html
@@ -17,7 +17,7 @@
     <dt>{% trans "Project ID" %}</dt>
     <dd>{{ port.tenant_id|default:"-" }}</dd>
     <dt>{% trans "Fixed IP" %}</dt>
-    <dd>
+    <dd class="whole-row">
       {% if port.fixed_ips.items|length > 1 %}
       {% for ip in port.fixed_ips %}
       <b>{% trans "IP address:" %}</b> {{ ip.ip_address }},
@@ -33,10 +33,11 @@
     <dd>{{ port.status|default:_("None") }}</dd>
     <dt>{% trans "Admin State" %}</dt>
     <dd>{{ port.admin_state|default:_("None") }}</dd>
+		<div class="clear"></div>
     <dt>{% trans "Attached Device" %}</dt>
     {% if port.device_id|length > 1 or port.device_owner %}
-    <dd><b>{% trans "Device Owner" %}</b>: {{ port.device_owner|default:_("None") }}</dd>
-    <dd><b>{% trans "Device ID" %}</b>: {{ port.device_id|default:"-" }}</dd>
+		<dd class="whole-row"><span><b>{% trans "Device Owner" %}</b>: {{ port.device_owner|default:_("None") }}</span>
+    <span><b>{% trans "Device ID" %}</b>: {{ port.device_id|default:"-" }}</span>
     {% else %}
     <dd>No attached device</dd>
     {% endif %}
