replace "No device attached" with "{% trans "xxx"%}"   ref #349

--- a/openstack_dashboard/dashboards/project/networks/templates/networks/subnets/_detail_overview.html
+++ b/openstack_dashboard/dashboards/project/networks/templates/networks/subnets/_detail_overview.html
@@ -26,7 +26,13 @@
       {% endfor %}
     </dd>
     <dt>{% trans "DHCP Enable" %}</dt>
-    <dd>{{ subnet.enable_dhcp|yesno|capfirst }}</dd>
+    <dd>
+      {% ifequal subnet.enable_dhcp|yesno:"true,false" "true" %}
+          {% trans "True"%}
+      {% else %}
+          {% trans "False" %}
+      {% endifequal %}
+    </dd>
     <dt>{% trans "Gateway IP" %}</dt>
     <dd>{{ subnet.gateway_ip|default:"-" }}</dd>
     <dt>{% trans "Additional routes" %}</dt>
