--- a/openstack_dashboard/dashboards/project/networks/templates/networks/_detail_overview.html
+++ b/openstack_dashboard/dashboards/project/networks/templates/networks/_detail_overview.html
@@ -15,9 +15,21 @@
     <dt>{% trans "Admin State" %}</dt>
     <dd>{{ network.admin_state|default:_("Unknown") }}</dd>
     <dt>{% trans "Shared" %}</dt>
-    <dd>{{ network.shared|yesno|capfirst }}</dd>
+    <dd>
+      {% ifequal network.shared|yesno:"true,false" "true" %}
+          {% trans "True"%}
+      {% else %}
+          {% trans "False" %}
+      {% endifequal %}
+    </dd>
     <dt>{% trans "External Network" %}</dt>
-    <dd>{{ network.router__external|yesno|capfirst }}</dd>
+    <dd>
+      {% ifequal network.router__external|yesno:"true,false" "true" %}
+          {% trans "True"%}
+      {% else %}
+          {% trans "False" %}
+      {% endifequal %}
+    </dd>
     {% if network.provider__network_type %}
     <dt>{% trans "Provider Network" %}</dt>
 		<dd>
