--- a/openstack_dashboard/dashboards/admin/hypervisors/templates/hypervisors/_detail_instance.html
+++ b/openstack_dashboard/dashboards/admin/hypervisors/templates/hypervisors/_detail_instance.html
@@ -15,14 +15,14 @@
 
 <div class="info row-fluid detail">
   <div class="span12">
-    <h4 class="meter_image" id="cpu_title_image"><span style="line-height:2.5">{% trans "cpu" %}</span><span style="margin-left:94.5%;cursor:pointer" onClick="horizon.d3_line_chart_ceilometer.showCPU();">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></h4>
+    <h4 class="meter_image" id="cpu_title_image"><span style="line-height:2.5">{% trans "cpu" %}</span><span class="ceil_span_image" onClick="horizon.d3_line_chart_ceilometer.showCPU();">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></h4>
     <hr class="header_rule" />
     <div id="cpu_cup_util" class="info row-fluid detail">
      <div class="chart_title_name"><div class="chart_title_name_left">{% trans "VM CPU Usage" %}</div><div class="chart_title_name_right">{% trans "VM CPU Usage Rate" %}</div><div class="chart_title_name_clear"/></div>
       <div class="span9 chart_container" style="width: 400px;">
           <div class="chart"
                data-chart-type="line_chart"
-               data-url="{% url 'horizon:admin:metering:samples'%}?meter=hardware_cpu_load_1min&group_by=project&date_options=null&resource_id={{ instance }}"
+               data-url="{% url 'horizon:admin:metering:samples'%}?meter=hardware.cpu.load.1min&group_by=project&date_options=null&resource_id={{ instance }}"
                data-form-selector='#linechart_general_form'
                data-legend-selector="#legend"
                data-smoother-selector="#smoother"
@@ -54,7 +54,7 @@
 </div>
 <div class="info row-fluid detail">
   <div class="span12">
-    <h4 class="meter_image" id="memory_title_image"><span style="line-height:2.5">{% trans "memory" %}</span><span style="margin-left:92%;cursor:pointer" onClick="horizon.d3_line_chart_ceilometer.showMemory();">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></h4>
+    <h4 class="meter_image" id="memory_title_image"><span style="line-height:2.5">{% trans "memory" %}</span><span class="ceil_span_image" onClick="horizon.d3_line_chart_ceilometer.showMemory();">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></h4>
     <hr class="header_rule" />
     <div id="memory_memory_usage" class="info row-fluid detail">
       <div class="chart_title_name"><div class="chart_title_name_left">{% trans "VM Memory Usage" %}</div><div class="chart_title_name_right">{% trans "VM Memory Usage Rate" %}</div><div class="chart_title_name_clear"/></div>
@@ -90,7 +90,7 @@
 </div>
 <div class="info row-fluid detail">
   <div class="span12">
-    <h4 class="meter_image" id="network_bytes_image"><span style="line-height:2.5">{% trans "network" %}</span><span style="margin-left:91.5%;cursor:pointer" onClick="horizon.d3_line_chart_ceilometer.showNetworkBytes();">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></h4>
+    <h4 class="meter_image" id="network_bytes_image"><span style="line-height:2.5">{% trans "network" %}</span><span class="ceil_span_image" onClick="horizon.d3_line_chart_ceilometer.showNetworkBytes();">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></h4>
     <hr class="header_rule" />
     <div id="network_bytes" class="info row-fluid detail">
     <div class="chart_title_name"><div class="chart_title_name_left">{% trans "VM Network Outgong and Ingong Bytes" %}</div><div class="chart_title_name_right" style="margin-right:39.5%;">{% trans "VM Network Outgong and Ingong Packets" %}</div><div class="chart_title_name_clear"/></div>
