--- a/openstack_dashboard/dashboards/admin/hypervisors/templates/hypervisors/_detail_instance.html
+++ b/openstack_dashboard/dashboards/admin/hypervisors/templates/hypervisors/_detail_instance.html
@@ -27,6 +27,7 @@
                data-legend-selector="#legend"
                data-smoother-selector="#smoother"
                data-display="true"
+               data-unit-conver="false"
                data-slider-selector="#slider">
           </div>
           <div id="slider"></div>
@@ -40,6 +41,7 @@
                data-legend-selector="#legend"
                data-smoother-selector="#smoother"
                data-display="true"
+               data-unit-conver="false"
                data-slider-selector="#slider">
           </div>
           <div id="slider"></div>
@@ -66,6 +68,7 @@
                data-legend-selector="#legend"
                data-smoother-selector="#smoother"
                data-display="true"
+               data-unit-conver="true"
                data-slider-selector="#slider">
           </div>
           <div id="slider"></div>
@@ -79,6 +82,7 @@
                data-legend-selector="#legend"
                data-smoother-selector="#smoother"
                data-display="true"
+               data-unit-conver="true"
                data-slider-selector="#slider">
           </div>
           <div id="slider"></div>
@@ -101,6 +105,7 @@
                data-form-selector='#linechart_general_form'
                data-legend-selector="#legend"
                data-display="true"
+               data-unit-conver="true"
                data-smoother-selector="#smoother"
                data-slider-selector="#slider">
           </div>
@@ -114,6 +119,7 @@
                data-form-selector='#linechart_general_form'
                data-legend-selector="#legend"
                data-display="true"
+               data-unit-conver="false"
                data-smoother-selector="#smoother"
                data-slider-selector="#slider">
           </div>
