--- a/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_ceilometer.html
+++ b/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_ceilometer.html
@@ -1,6 +1,5 @@
 {% load i18n %}
 {% load url from future %}
-
 <div class="control-group">
   <div class="controls">
     {% trans "refresh cycle" %}:&nbsp;<select data-line-chart-command="select_box_change" onChange="horizon.d3_line_chart_ceilometer.switchTime();"
@@ -12,14 +11,12 @@
     </select>
   </div>
 </div>
-
-
 <div class="info row-fluid detail">
   <div class="span12">
     <h4 class="meter_image" id="cpu_title_image"><span style="line-height:2.5">{% trans "cpu" %}</span><span class="ceil_span_image" onClick="horizon.d3_line_chart_ceilometer.showCPU();">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></h4>
     <hr class="header_rule" />
     <div id="cpu_cup_util" class="info row-fluid detail">
-     <div class="chart_title_name"><div class="chart_title_name_left">{% trans "VM CPU Usage" %}</div><div class="chart_title_name_right">{% trans "VM CPU Usage Rate" %}</div><div class="chart_title_name_clear"/></div>
+      <div class="chart_title_name"><div class="chart_title_name_left">{% trans "VM CPU Usage" %}</div><div class="chart_title_name_right">{% trans "VM CPU Usage Rate" %}</div><div class="chart_title_name_clear"/></div>
       <div class="span9 chart_container" style="width: 400px;">
           <div class="chart"
                data-chart-type="line_chart"
@@ -28,26 +25,26 @@
                data-legend-selector="#legend"
                data-smoother-selector="#smoother"
                data-display="true"
+               data-unit-conver="false"
                data-slider-selector="#slider">
           </div>
           <div id="slider"></div>
         </div>
         <div class="span3 legend_container">
-          <div class="span9 chart_container" style="width: 400px;">
-          <div class="chart"
-               data-chart-type="line_chart"
-               data-url="{% url 'horizon:admin:metering:samples'%}?meter=cpu_util&group_by=project&date_options=null&resource_id={{ instance.id }}"
-               data-form-selector='#linechart_general_form'
-               data-legend-selector="#legend"
-               data-smoother-selector="#smoother"
-               data-display="true"
-               data-slider-selector="#slider">
-          </div>
-          <div id="slider"></div>
+	          <div class="span9 chart_container" style="width: 400px;">
+	          <div class="chart"
+	               data-chart-type="line_chart"
+	               data-url="{% url 'horizon:admin:metering:samples'%}?meter=cpu_util&group_by=project&date_options=null&resource_id={{ instance.id }}"
+	               data-form-selector='#linechart_general_form'
+	               data-legend-selector="#legend"
+	               data-smoother-selector="#smoother"
+	               data-display="true"
+	               data-unit-conver="false"
+	               data-slider-selector="#slider">
+	          </div>
+	          <div id="slider"></div>
+	        </div>
         </div>
-        
-        </div>
-
         </div>
       </div>
     </div>
@@ -68,6 +65,7 @@
                data-legend-selector="#legend"
                data-smoother-selector="#smoother"
                data-display="true"
+               data-unit-conver="false"
                data-slider-selector="#slider">
           </div>
           <div id="slider"></div>
@@ -80,7 +78,7 @@
                data-form-selector='#linechart_general_form'
                data-legend-selector="#legend"
                data-smoother-selector="#smoother"
-               data-display="true"
+               data-display="false"
                data-slider-selector="#slider">
           </div>
           <div id="slider"></div>
@@ -106,6 +104,7 @@
                data-legend-selector="#legend"
                data-display="true"
                data-smoother-selector="#smoother"
+               data-unit-conver="true"
                data-slider-selector="#slider">
           </div>
           <div id="slider"></div>
@@ -119,6 +118,7 @@
                data-form-selector='#linechart_general_form'
                data-legend-selector="#legend"
                data-display="true"
+               data-unit-conver="false"
                data-smoother-selector="#smoother"
                data-slider-selector="#slider">
           </div>
